# energy-data-br

./: .gitignore  LICENSE  README.md  bench_rapido.js  db.py  fix_db_final.sh  pyproject.toml  run_orchestrator.sh  schema.sql  schema_real.sql  simulate_iot.py  stress_test.js  sync_lock.sh  update_treemap.py
.archive/: populate_fato.py  populate_fato_fast.py  populate_fato_incremental.py
.github/workflows/: ci.yml
aneel/: api_client.py
docs/: architecture.md  constraints.md  coverage.md  deploy.md  incident-report-2026-07-12.md  regras_negocio.md  roadmap.md
docs/incidentes/: 2026-07-12-sync-incompleto-resolvido.md
energy_data_br/: cli.py  db.py  export.py  iot.py  server.py  server.py.backup  server.py.backup2  server.py.bak2  server.py.bak3  server.py.bak4  sync_orchestrator.py  tokenizacao.py
energy_data_br/aneel/: __init__.py  api_client.py  cli.py  siga_client.py
energy_data_br/etl/: populate_mmgd_fato.py  populate_siga_fato.py  update_mmgd_fato_campos.py
energy_data_br/ons/: api_carga.py  dessem_client.py
energy_data_br/reconciliation/: agent.py
logs/reconciliation/: reconciliation_all_20260714_115854.json  reconciliation_all_20260714_123318.json
ons/: __init__.py  api_carga.py
src/aneel_mmgd/: __init__.py  api_client.py  cli.py  db.py  rules.py  schema.sql
tests/: conftest.py  test_aneel_client.py  test_api_client_integration.py  test_cli.py  test_db.py  test_ons_client.py  test_rules.py
web/: dashboard.html  treemap.html
