[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aneel-mmgd"
version = "0.1.0"
description = "ETL + regras de negócio + treemap para dados abertos de Micro/Minigeração Distribuída (ANEEL)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "MEx Energia", email = "dev@mex.eco.br" }
]
keywords = ["aneel", "energia", "geracao-distribuida", "dados-abertos", "solar", "bess"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Office/Business :: Financial",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://mex.eco.br"
Repository = "https://github.com/scoobiii/aneel-mmgd"
Issues = "https://github.com/scoobiii/aneel-mmgd/issues"

[project.scripts]
aneel-mmgd = "aneel_mmgd.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aneel_mmgd = ["schema.sql"]

[tool.pytest.ini_options]
testpaths = ["tests"]

