[project]
name = "energy-data-br"
version = "0.2.0"
description = "ETL de dados abertos de energia do Brasil (ANEEL + ONS)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.scripts]
energy-data-br = "cli:main"

[tool.setuptools]
packages = ["aneel", "ons"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
