[project]
name = "energy-data-br"
version = "0.2.0"
description = "ETL de dados abertos de energia do Brasil (ANEEL + ONS)"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"

[project.scripts]
energy-data-br = "energy_data_br.cli:main"

[tool.setuptools]
packages = ["energy_data_br", "energy_data_br.aneel", "energy_data_br.ons"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
